first template edit

--- a/public/choose.html
+++ b/public/choose.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Builder</title>
     <link rel="stylesheet" href="./choose.css">
 </head>
+
 <body>
-<main class="page-content">
-   
-    <div class="card">
-        <div class="content">
-            <h2 class="title">Template 1</h2>
-            <p class="copy">Plan your next beach trip with these fabulous destinations</p><button class="btn">Use This</button>
+    <main class="page-content">
+
+        <div class="card">
+            <div class="content">
+                <h2 class="title">Template 1</h2>
+                <button class="btn" data-template=1>Use
+                    This</button>
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="content">
-            <h2 class="title">Template 2</h2>
-            <p class="copy">It's the desert you've always dreamed of</p><button class="btn">Use This</button>
+        <div class="card">
+            <div class="content">
+                <h2 class="title">Template 2</h2>
+                <button class="btn" data-template=2>Use This</button>
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="content">
-            <h2 class="title">Template 3</h2>
-            <p class="copy">Seriously, straight up, just blast off into outer space today</p><button class="btn">Use This</button>
+        <div class="card">
+            <div class="content">
+                <h2 class="title">Template 3</h2>
+                <button class="btn" data-template=3>Use
+                    This</button>
+            </div>
         </div>
-    </div>
-</main>
+    </main>
+
+    <script src="/dist/index.js" type="module"></script>
 </body>
+
 </html>
