--- a/public/form.html
+++ b/public/form.html
@@ -77,6 +77,61 @@
                         class="formbold-form-input" />
                 </div>
 
+                <h3>Latest work roles/education</h3>
+
+
+                <div class="formbold-input-group">
+
+                    <input type="text" name="expname1" id="age" placeholder="Experience 1"
+                        class="formbold-form-input" />
+                    <label for="sd1">Start Date</label>
+                    <input type="date" name="expsd1" id="sd1" placeholder="Start Date" class="formbold-form-input" />
+                    <label for="ed1">End Date</label>
+                    <input type="date" name="exped1" id="ed1" placeholder="Start Date" class="formbold-form-input" />
+
+
+                    <div class="formbold-input-group">
+                        <textarea type="url" name="expdesc1" id="age" placeholder="Enter brief description"
+                            class="formbold-form-input" style="height: 200px;"></textarea>
+                    </div>
+
+                </div>
+                <hr>
+                <div class="formbold-input-group">
+
+                    <input type="text" name="expname2" id="age" placeholder="Experience 2"
+                        class="formbold-form-input" />
+                    <label for="sd1">Start Date</label>
+                    <input type="date" name="expsd2" id="sd1" placeholder="Start Date" class="formbold-form-input" />
+                    <label for="ed1">End Date</label>
+                    <input type="date" name="exped2" id="ed1" placeholder="Start Date" class="formbold-form-input" />
+
+
+                    <div class="formbold-input-group">
+                        <textarea type="url" name="expdesc2" id="age" placeholder="Enter brief description"
+                            class="formbold-form-input" style="height: 200px;"></textarea>
+                    </div>
+
+                </div>
+                <hr>
+                <div class="formbold-input-group">
+
+                    <input type="text" name="expname3" id="age" placeholder="Experience 3"
+                        class="formbold-form-input" />
+                    <label for="sd1">Start Date</label>
+                    <input type="date" name="expsd3" id="sd1" placeholder="Start Date" class="formbold-form-input" />
+                    <label for="ed1">End Date</label>
+                    <input type="date" name="exped3" id="ed1" placeholder="Start Date" class="formbold-form-input" />
+
+
+                    <div class="formbold-input-group">
+                        <textarea type="url" name="expdesc3" id="age" placeholder="Enter brief description"
+                            class="formbold-form-input" style="height: 200px;"></textarea>
+                    </div>
+
+                </div>
+
+
 
 
 
