--- a/public/form.html
+++ b/public/form.html
@@ -14,12 +14,16 @@
         <!-- Author: FormBold Team -->
         <!-- Learn More: https://formbold.com -->
         <div class="formbold-form-wrapper">
-            <img src="your-image-url-here.jpg">
+
             <form id="resume-form">
                 <div class="formbold-input-group">
                     <label for="name" class="formbold-form-label"> Name </label>
                     <input type="text" name="name" id="name" placeholder="Enter your name"
                         class="formbold-form-input" />
+                </div>
+                <div class="formbold-input-group">
+                    <label for="name" class="formbold-form-label"> Enter Your Hosted Display Image URL </label>
+                    <input type="text" name="photo" id="name" placeholder="https://" class="formbold-form-input" />
                 </div>
 
                 <div class="formbold-input-group">
@@ -168,132 +172,65 @@
 
                     </label>
 
-                    <div class="formbold-radio-flex">
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label">
-                                <input class="formbold-input-radio" type="radio" name="ans" id="ans" />
-                                Yes
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
 
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label">
-                                <input class="formbold-input-radio" type="radio" name="ans" id="ans" />
-                                No
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label">
-                                <input class="formbold-input-radio" type="radio" name="ans" id="ans" />
-                                Maybe
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-                    </div>
                 </div>
 
                 <div class="formbold-input-radio-wrapper">
                     <label class="formbold-form-label">
-                        Which languages & freameworks you know?
+                        <h2>
+                            Enter Your Top 6 Professional Skills
+                        </h2>
                     </label>
 
-                    <div class="formbold-radio-flex">
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="c">
-                                <input class="formbold-input-radio" type="radio" name="c" id="c" />
-                                C
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
+                    <div class="formbold-input-group">
+                        <label for="age" class="formbold-form-label"> Skill 1 </label>
+                        <input type="text" name="skill1" id="age" placeholder="" class="formbold-form-input" />
 
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="c++">
-                                <input class="formbold-input-radio" type="radio" name="c++" id="c++" />
-                                c++
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
+                    </div>
+                    <div class="formbold-input-group">
+                        <label for="age" class="formbold-form-label"> Skill 2 </label>
+                        <input type="text" name="skill2" id="age" placeholder="" class="formbold-form-input" />
 
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="java">
-                                <input class="formbold-input-radio" type="radio" name="java" id="java" />
-                                Java
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
+                    </div>
+                    <div class="formbold-input-group">
+                        <label for="age" class="formbold-form-label"> Skill 3 </label>
+                        <input type="text" name="skill3" id="age" placeholder="" class="formbold-form-input" />
 
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="python">
-                                <input class="formbold-input-radio" type="radio" name="python" id="python" />
-                                Python
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
+                    </div>
+                    <div class="formbold-input-group">
+                        <label for="age" class="formbold-form-label"> Skill 4 </label>
+                        <input type="text" name="skill4" id="age" placeholder="" class="formbold-form-input" />
 
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="javaScript">
-                                <input class="formbold-input-radio" type="radio" name="javaScript" id="javaScript" />
-                                JavaScript
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
+                    </div>
+                    <div class="formbold-input-group">
+                        <label for="age" class="formbold-form-label"> Skill 5 </label>
+                        <input type="text" name="skill5" id="age" placeholder="" class="formbold-form-input" />
 
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="react">
-                                <input class="formbold-input-radio" type="radio" name="react" id="react" />
-                                React
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
+                    </div>
+                    <div class="formbold-input-group">
+                        <label for="age" class="formbold-form-label"> Skill 6 </label>
+                        <input type="text" name="skill6" id="age" placeholder="" class="formbold-form-input" />
 
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="angular">
-                                <input class="formbold-input-radio" type="radio" name="angular" id="angular" />
-                                Angular
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="django">
-                                <input class="formbold-input-radio" type="radio" name="django" id="django" />
-                                Django
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="tailwind">
-                                <input class="formbold-input-radio" type="radio" name="tailwind" id="tailwind" />
-                                Tailwind CSS
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="bootstrap">
-                                <input class="formbold-input-radio" type="radio" name="bootstrap" id="bootstrap" />
-                                Bootstrap
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
                     </div>
                 </div>
 
                 <div>
                     <label for="message" class="formbold-form-label">
-                        Any comments or suggestions
+                        Write a brief description about yourself
                     </label>
                     <textarea rows="6" name="description" id="message" placeholder="Type here..."
                         class="formbold-form-input"></textarea>
                 </div>
 
-                <button class="formbold-btn">Submit</button>
+
+                <a href="./assets/template1/index.html" target="_blank">
+                    <button class="formbold-btn">
+                        Submit and
+                        See
+                        Preview
+                    </button>
+                </a>
             </form>
-            <a href="./assets/template1/index.html" target="_blank">see preview</a>
         </div>
     </div>
     <script src="/dist/index.js"></script>
