--- a/public/assets/template1/index.html
+++ b/public/assets/template1/index.html
@@ -350,7 +350,7 @@
             <script src="js/now-ui-kit.js?ver=1.1.0"></script>
             <script src="js/aos.js?ver=1.1.0"></script>
             <script src="scripts/main.js?ver=1.1.0"></script>
-            <script src="./index.js"></script>
+            <script src="../template1/scripts/resume.js"></script>
 </body>
 
 </html>
