--- a/public/assets/template1/index.html
+++ b/public/assets/template1/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="container">
               <div class="content-center">
-                <div class="cc-profile-image"><a href="#"><img src="images/anthony.jpg" alt="Image" /></a></div>
+                <div class="cc-profile-image"><a href="#"><img src="" id="personPfp" alt="Image" /></a></div>
                 <div class="h2 title" id="personName">Anthony Barnett</div>
                 <p class="category text-white" id="occupation">Web Developer, Graphic Designer, Photographer</p><a
                   class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
@@ -123,7 +123,9 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-md-6">
-                  <div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
+
+
+                  <div class="progress-container progress-primary"><span class="progress-badge" id="skill1">HTML</span>
                     <div class="progress">
                       <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
                         data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0"
@@ -132,7 +134,7 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
+                  <div class="progress-container progress-primary"><span class="progress-badge" id="skill2">CSS</span>
                     <div class="progress">
                       <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
                         data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0"
@@ -143,7 +145,8 @@
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
+                  <div class="progress-container progress-primary"><span class="progress-badge"
+                      id="skill3">JavaScript</span>
                     <div class="progress">
                       <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
                         data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0"
@@ -152,7 +155,7 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="progress-container progress-primary"><span class="progress-badge">SASS</span>
+                  <div class="progress-container progress-primary"><span class="progress-badge" id="skill4">SASS</span>
                     <div class="progress">
                       <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
                         data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0"
@@ -163,7 +166,8 @@
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
+                  <div class="progress-container progress-primary"><span class="progress-badge"
+                      id="skill5">Bootstrap</span>
                     <div class="progress">
                       <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
                         data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0"
@@ -172,7 +176,8 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="progress-container progress-primary"><span class="progress-badge">Photoshop</span>
+                  <div class="progress-container progress-primary"><span class="progress-badge"
+                      id="skill6">Photoshop</span>
                     <div class="progress">
                       <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
                         data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0"
@@ -425,166 +430,7 @@
         </div>
       </div>
 
-      <div class="section" id="reference">
-        <div class="container cc-reference">
-          <div class="h4 mb-4 text-center title">References</div>
-          <div class="card" data-aos="zoom-in">
-            <div class="carousel slide" id="cc-Indicators" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li class="active" data-target="#cc-Indicators" data-slide-to="0"></li>
-                <li data-target="#cc-Indicators" data-slide-to="1"></li>
-                <li data-target="#cc-Indicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <div class="row">
-                    <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-1.jpg"
-                        alt="Image" />
-                      <div class="h5 pt-2">Aiyana</div>
-                      <p class="category">CEO / WEBM</p>
-                    </div>
-                    <div class="col-lg-10 col-md-9">
-                      <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est
-                        porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam
-                        luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper,
-                        laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient
-                        fringilla rhoncus eleifend.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="row">
-                    <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-2.jpg"
-                        alt="Image" />
-                      <div class="h5 pt-2">Braiden</div>
-                      <p class="category">CEO / Creativem</p>
-                    </div>
-                    <div class="col-lg-10 col-md-9">
-                      <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est
-                        porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam
-                        luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper,
-                        laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient
-                        fringilla rhoncus eleifend.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="row">
-                    <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-3.jpg"
-                        alt="Image" />
-                      <div class="h5 pt-2">Alexander</div>
-                      <p class="category">CEO / Webnote</p>
-                    </div>
-                    <div class="col-lg-10 col-md-9">
-                      <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est
-                        porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam
-                        luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper,
-                        laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient
-                        fringilla rhoncus eleifend.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="section" id="contact">
-        <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
-          <div class="container">
-            <div class="cc-contact">
-              <div class="row">
-                <div class="col-md-9">
-                  <div class="card mb-0" data-aos="zoom-in">
-                    <div class="h4 text-center title">Contact Me</div>
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="card-body">
-                          <form action="https://formspree.io/your@email.com" method="POST">
-                            <div class="p pb-3"><strong>Feel free to contact me </strong></div>
-                            <div class="row mb-3">
-                              <div class="col">
-                                <div class="input-group"><span class="input-group-addon"><i
-                                      class="fa fa-user-circle"></i></span>
-                                  <input class="form-control" type="text" name="name" placeholder="Name"
-                                    required="required" />
-                                </div>
-                              </div>
-                            </div>
-                            <div class="row mb-3">
-                              <div class="col">
-                                <div class="input-group"><span class="input-group-addon"><i
-                                      class="fa fa-file-text"></i></span>
-                                  <input class="form-control" type="text" name="Subject" placeholder="Subject"
-                                    required="required" />
-                                </div>
-                              </div>
-                            </div>
-                            <div class="row mb-3">
-                              <div class="col">
-                                <div class="input-group"><span class="input-group-addon"><i
-                                      class="fa fa-envelope"></i></span>
-                                  <input class="form-control" type="email" name="_replyto" placeholder="E-mail"
-                                    required="required" />
-                                </div>
-                              </div>
-                            </div>
-                            <div class="row mb-3">
-                              <div class="col">
-                                <div class="form-group">
-                                  <textarea class="form-control" name="message" placeholder="Your Message"
-                                    required="required"></textarea>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="row">
-                              <div class="col">
-                                <button class="btn btn-primary" type="submit">Send</button>
-                              </div>
-                            </div>
-                          </form>
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="card-body">
-                          <p class="mb-0"><strong>Address </strong></p>
-                          <p class="pb-2">140, City Center, New York, U.S.A</p>
-                          <p class="mb-0"><strong>Phone</strong></p>
-                          <p class="pb-2">+1718-111-0011</p>
-                          <p class="mb-0"><strong>Email</strong></p>
-                          <p>anthony@company.com</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-<<<<<<< HEAD
 
-
-
-            <footer class="footer">
-              <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i
-                    class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link "
-                  href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a
-                  class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x"
-                    aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i
-                    class="fa fa-instagram fa-2x " aria-hidden="true"></i></a>
-              </div>
-
-            </footer>
-            <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
-            <script src="js/core/popper.min.js?ver=1.1.0"></script>
-            <script src="js/core/bootstrap.min.js?ver=1.1.0"></script>
-            <script src="js/now-ui-kit.js?ver=1.1.0"></script>
-            <script src="js/aos.js?ver=1.1.0"></script>
-            <script src="scripts/main.js?ver=1.1.0"></script>
-            <script src="../template1/scripts/resume.js"></script>
-=======
-          </div>
-        </div>
-      </div>
     </div>
   </div>
   <footer class="footer">
@@ -593,11 +439,7 @@
           aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x"
           aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x "
           aria-hidden="true"></i></a></div>
-    <div class="h4 title text-center">Anthony Barnett</div>
-    <div class="text-center text-muted">
-      <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com"
-          target="_blank">TemplateFlip</a></p>
-    </div>
+
   </footer>
   <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
   <script src="js/core/popper.min.js?ver=1.1.0"></script>
@@ -605,8 +447,8 @@
   <script src="js/now-ui-kit.js?ver=1.1.0"></script>
   <script src="js/aos.js?ver=1.1.0"></script>
   <script src="scripts/main.js?ver=1.1.0"></script>
-  <script src="./index.js"></script>
->>>>>>> parent of dd66d31 (bunch of improvements)
+  <script src="./scripts/resume.js"></script>
+  >>>>>>> parent of dd66d31 (bunch of improvements)
 </body>
 
 </html>
