--- a/public/form.html
+++ b/public/form.html
@@ -14,7 +14,6 @@
         <!-- Author: FormBold Team -->
         <!-- Learn More: https://formbold.com -->
         <div class="formbold-form-wrapper">
-            <img src="your-image-url-here.jpg">
             <form id="resume-form">
                 <div class="formbold-input-group">
                     <label for="name" class="formbold-form-label"> Name </label>
@@ -31,6 +30,11 @@
                 <div class="formbold-input-group">
                     <label for="age" class="formbold-form-label"> Age </label>
                     <input type="text" name="age" id="age" placeholder="Enter your age" class="formbold-form-input" />
+                </div>
+                <div class="formbold-input-group">
+                    <label for="age" class="formbold-form-label"> Picture URL</label>
+                    <input type="url" name="pictureURL" id="pictureURL" placeholder="Enter your photo link"
+                        class="formbold-form-input" />
                 </div>
 
 
@@ -71,6 +75,62 @@
                     <input type="text" name="p4_name" id="age" placeholder="Enter Name" class="formbold-form-input" />
 
                 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                <div class="formbold-input-group">
+                    <label for="age" class="formbold-form-label"> Skill 1 </label>
+                    <input type="text" name="skill1" id="age" placeholder="Enter Name" class="formbold-form-input" />
+
+                </div>
+
+
+                <div class="formbold-input-group">
+                    <label for="age" class="formbold-form-label"> Skill 2 </label>
+                    <input type="text" name="skill2" id="age" placeholder="Enter Name" class="formbold-form-input" />
+
+                </div>
+
+
+                <div class="formbold-input-group">
+                    <label for="age" class="formbold-form-label"> Skill 3 </label>
+                    <input type="text" name="skill3" id="age" placeholder="Enter Name" class="formbold-form-input" />
+
+                </div>
+
+
+                <div class="formbold-input-group">
+                    <label for="age" class="formbold-form-label"> Skill 4 </label>
+                    <input type="text" name="skill4" id="age" placeholder="Enter Name" class="formbold-form-input" />
+
+                </div>
+                <div class="formbold-input-group">
+                    <label for="age" class="formbold-form-label"> Skill 5 </label>
+                    <input type="text" name="skill5" id="age" placeholder="Enter Name" class="formbold-form-input" />
+
+                </div>
+                <div class="formbold-input-group">
+                    <label for="age" class="formbold-form-label"> Skill 6 </label>
+                    <input type="text" name="skill6" id="age" placeholder="Enter Name" class="formbold-form-input" />
+
+                </div>
+
+
+
 
                 <div class="formbold-input-group">
                     <input type="url" name="p4_link" id="age" placeholder="Enter link/demo"
@@ -168,124 +228,14 @@
 
                     </label>
 
-                    <div class="formbold-radio-flex">
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label">
-                                <input class="formbold-input-radio" type="radio" name="ans" id="ans" />
-                                Yes
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
 
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label">
-                                <input class="formbold-input-radio" type="radio" name="ans" id="ans" />
-                                No
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label">
-                                <input class="formbold-input-radio" type="radio" name="ans" id="ans" />
-                                Maybe
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-                    </div>
                 </div>
 
-                <div class="formbold-input-radio-wrapper">
-                    <label class="formbold-form-label">
-                        Which languages & freameworks you know?
-                    </label>
 
-                    <div class="formbold-radio-flex">
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="c">
-                                <input class="formbold-input-radio" type="radio" name="c" id="c" />
-                                C
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="c++">
-                                <input class="formbold-input-radio" type="radio" name="c++" id="c++" />
-                                c++
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="java">
-                                <input class="formbold-input-radio" type="radio" name="java" id="java" />
-                                Java
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="python">
-                                <input class="formbold-input-radio" type="radio" name="python" id="python" />
-                                Python
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="javaScript">
-                                <input class="formbold-input-radio" type="radio" name="javaScript" id="javaScript" />
-                                JavaScript
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="react">
-                                <input class="formbold-input-radio" type="radio" name="react" id="react" />
-                                React
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="angular">
-                                <input class="formbold-input-radio" type="radio" name="angular" id="angular" />
-                                Angular
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="django">
-                                <input class="formbold-input-radio" type="radio" name="django" id="django" />
-                                Django
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="tailwind">
-                                <input class="formbold-input-radio" type="radio" name="tailwind" id="tailwind" />
-                                Tailwind CSS
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-
-                        <div class="formbold-radio-group">
-                            <label class="formbold-radio-label" for="bootstrap">
-                                <input class="formbold-input-radio" type="radio" name="bootstrap" id="bootstrap" />
-                                Bootstrap
-                                <span class="formbold-radio-checkmark"></span>
-                            </label>
-                        </div>
-                    </div>
-                </div>
 
                 <div>
                     <label for="message" class="formbold-form-label">
-                        Any comments or suggestions
+                        Give Your Brief description
                     </label>
                     <textarea rows="6" name="description" id="message" placeholder="Type here..."
                         class="formbold-form-input"></textarea>
