html2pdf lib integration(need to add print MQ)

--- a/public/assets/template1/index.html
+++ b/public/assets/template1/index.html
@@ -39,13 +39,15 @@
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
+              <li class="nav-item"><button class="nav-link smooth-scroll" id="printBtn">Print<button /></li>
+
             </ul>
           </div>
         </div>
       </nav>
     </div>
   </header>
-  <div class="page-content">
+  <div class="page-content" id="page-content">
     <div>
       <div class="profile-page">
         <div class="wrapper">
@@ -447,6 +449,9 @@
   <script src="js/now-ui-kit.js?ver=1.1.0"></script>
   <script src="js/aos.js?ver=1.1.0"></script>
   <script src="scripts/main.js?ver=1.1.0"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
+    integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./scripts/resume.js"></script>
   >>>>>>> parent of dd66d31 (bunch of improvements)
 </body>
